# PaperHunter

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  start.bat
backend/: Dockerfile  config.py  database.py  main.py
backend/agents/: chat_agent.py  download_agent.py  filter_agent.py  search_agent.py
backend/api/: chat.py  papers.py  settings.py  tasks.py  websocket.py
backend/crew/: paper_crew.py  workflows.py
backend/models/: message.py  paper.py  task.py
backend/services/: search_planning_service.py
backend/tools/: arxiv_tool.py  crossref_tool.py  database_tool.py  google_scholar_tool.py  openalex_tool.py  pdf_download_tool.py  semantic_scholar_tool.py
backend/utils/: dedup.py  download_state.py  llm_client.py  llm_scorer.py  plan_repairer.py  plan_validator.py  proxy.py  query_translator.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentBubble.tsx  AgentStatus.tsx  ChatWindow.tsx  EmptyState.tsx  FilterPanel.tsx  PaperCard.tsx  PaperDrawer.tsx  SearchGraphPanel.tsx  TaskProgress.tsx  TaskSidebar.tsx
frontend/src/hooks/: useChat.ts  useWebSocket.ts
frontend/src/pages/: Dashboard.tsx  PaperList.tsx  Settings.tsx
frontend/src/stores/: agentStore.ts  paperStore.ts
