[project]
name = "paperhunter"
version = "0.1.0"
description = "PaperHunter - AI Agent 团队论文搜索系统"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.28.0",
    "crewai-tools>=0.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
    "aiohttp>=3.9.0",
    "arxiv>=2.1.0",
    "semanticscholar>=0.7.0",
    "pyalex>=0.13.0",
    "habanero>=1.2.0",
    "scholarly>=1.7.0",
    "openai>=1.12.0",
    "apscheduler>=3.10.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
